# drone_tracking

./: .gitignore  covertTRT.md
.claude/: settings.json
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/drone_tracking/: setup.fish
devel/.private/drone_tracking/include/drone_tracking/: Detection.h
devel/.private/drone_tracking/lib/drone_tracking/: run_detector_conda.sh  run_yaw_ctrl_conda.sh
devel/.private/drone_tracking/lib/pkgconfig/: drone_tracking.pc
devel/.private/drone_tracking/share/drone_tracking/cmake/: drone_tracking-msg-extras.cmake  drone_tracking-msg-paths.cmake  drone_trackingConfig.cmake
devel/include/drone_tracking/: Detection.h
devel/lib/drone_tracking/: detector_node.py  run_detector_conda.sh  run_yaw_ctrl_conda.sh  yaw_controller_node.py
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  drone_tracking.pc
devel/lib/python3/dist-packages/drone_tracking/: __init__.py
devel/lib/python3/dist-packages/drone_tracking/msg/: _Detection.py  __init__.py
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/common-lisp/ros/drone_tracking/msg/: Detection.lisp  _package.lisp  _package_Detection.lisp  drone_tracking-msg.asd
devel/share/drone_tracking/cmake/: drone_tracking-msg-extras.cmake  drone_tracking-msg-paths.cmake  drone_trackingConfig-version.cmake  drone_trackingConfig.cmake
devel/share/gennodejs/ros/drone_tracking/: _index.js
devel/share/gennodejs/ros/drone_tracking/msg/: Detection.js  _index.js
devel/share/roseus/ros/drone_tracking/: manifest.l
logs/drone_tracking/: build.check.000.log.stderr
src/drone_tracking/: CMakeLists.txt  FLIGHT_CHECKLIST.md  FLIGHT_CHECKLIST_EN.md  README.md  package.xml
src/drone_tracking/config/: params.yaml
src/drone_tracking/launch/: drone_tracking.launch
src/drone_tracking/msg/: Detection.msg
src/drone_tracking/rviz/: drone_tracking.rviz
src/drone_tracking/scripts/: detector_node.py  nms_kernel.py  run_detector_conda.sh  yaw_controller_node.py
src/drone_tracking/scripts/nms_ext/: nms_binding.cpp  nms_kernel.cu  setup.py
(+9 files in other folders)
