<?xml version="1.0"?>
<package format="2">
  <name>drone_tracking</name>
  <version>0.1.0</version>
  <description>YOLO+ByteTrack drone detection and PX4 yaw tracking via ZED Mini + MAVROS</description>
  <maintainer email="zd@todo.todo">zd</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>

  <export/>
</package>
